force-app/main/default/objects/Campaign_Performance__c/Campaign_Performance__c.object-meta.xml
<CustomObject>
    <label>Campaign Performance</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Campaign Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>