force-app/main/default/objects/Campaign_Performance__c/fields/Amount_Spend__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spend__c</fullName>
    <label>Amount Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>