force-app/main/default/objects/Campaign_Performance__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign_c</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Campaign Performances</relationshipLabel>
    <relationshipName>Campaign_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>