force-app/main/default/objects/Campaign_Performance__c/fields/Cost_per_Lead_CPL__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Lead_CPL__c</fullName>
    <formula>Amount_Spend__c / Lead_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Lead (CPL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>