force-app/main/default/objects/Campaign_Performance__c/fields/CPE__c.field-meta.xml
<CustomField>
    <fullName>CPE__c</fullName>
    <formula>Amount_Spend__c /  Enquiry_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>