force-app/main/default/objects/Campaign_Performance__c/fields/CPL__c.field-meta.xml
<CustomField>
    <fullName>CPL__c</fullName>
    <formula>Amount_Spend__c /  Lead_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>