force-app/main/default/objects/Campaign_Performance__c/fields/Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>